--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name="ParseApplication"
+        android:name="anon"
         android:icon="@drawable/ic_launcher"
         
         <activity
