--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,11 +10,21 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name="anon"
-        android:icon="@drawable/ic_launcher"
+        android:name="Anon"
+        android:icon="@drawable/ic_launcher" >
         
         <activity
             android:name="com.anon.LogInScreen"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.anon.CreateNewUser"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
