--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -56,7 +56,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.anon.CreateNewGroupActivity"
+            android:name="com.anon.CreateNewGroup"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
