--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,9 +16,10 @@
         android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.anon.LogInScreen"
+            android:name="com.anon.DispatchActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,9 +27,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.anon.CreateNewUser"
+            android:name="com.anon.LogInScreen"
             android:label="@string/app_name"
-            android:noHistory="true"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.DEFAULT" />
@@ -37,8 +37,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.anon.DispatchActivity"
+            android:name="com.anon.CreateNewUser"
             android:label="@string/app_name"
+            android:noHistory="true"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.DEFAULT" />
@@ -58,16 +59,6 @@
         </activity>
         <activity
             android:name="com.anon.GroupsActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait" >
-            <intent-filter>
-                <action android:name="android.intent.action.DEFAULT" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name="com.anon.PostsActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
